...
            .wrapContentSize()
            .padding(20.dp)
            .background(color = Color.White, shape = RoundedCornerShape(30.dp))
            .padding(20.dp)
    ) {
        Text(
            text = "Choose Your Role",
            style = TextStyle(
                fontSize = 35.sp,
                //fontFamily = FontFamily(Font(R.font.roboto)),
                fontWeight = FontWeight(900),
                color = Color(0xFF000000),
                textAlign = TextAlign.Center
            ),
        )

        RoleButton(painterResource(R.drawable.student), "Student", authViewModel = authViewModel)
        RoleButton(painterResource(R.drawable.teacher), "Tutor", authViewModel = authViewModel)
    }
}

/*
    Function: Creates a button that if chosen takes the user to the student registration page
    Parameters: icon -> Image used on the button
...
                    modifier = Modifier.fillMaxWidth(),
                    onValueChange = {
                        authViewModel.onRegisterChange { currentRegisterData ->
                            currentRegisterData.copy(first_name = it)
                        }
                    },
                    label = { Text("First Name", fontWeight = FontWeight.Black) }
                )

                OutlinedTextField(
                    value = authViewModel.registerDataState.value.last_name,
                    modifier = Modifier.fillMaxWidth(),
                    onValueChange = {
...
