...
//    val password: String,
//    val expertise: Array<String>,
//    val experience: TutorLevel,
//    val verified_status: Boolean,
//    val description: String,
//    val degree: Array<String>,
//    //val date_of_birth:
//)
//
//@Entity(tableName = "student")
//data class studentTable (
//    @PrimaryKey(autoGenerate = true)
//    val student_id: Int,
...
    val expertise: Array<String>,
    val experience: Array<String>,
    val description: String,
    val school: String,
)

@Entity(tableName = "session")
data class tutor_session (
    @PrimaryKey(autoGenerate = true)
    val session_id: Int,
    val tutor_id: Int,
    val student_id: Int,
    val name: String,
...
