...
                navController.navigate(ScreenGraph.authGraph.route)
            },
            colors = ButtonDefaults.buttonColors(Color(0xFFEEA47F)),

        ) {
            Text(
                "Login",
                style = TextStyle(
                    color = Color(0xFFB24444),
                )
            )
        }

        // REGISTER BUTTON
        TextButton(
            onClick = {navController.navigate(Screen.RegistrationPage.route)}
        ) {
            Text(
                text = "Don't have an Account? Register Here!",
                style = TextStyle(
                    color = Color(0xFFEEA47F),
                    fontWeight = FontWeight.Black,
                    textAlign = TextAlign.End
                )
            )
...
